Mudança do nome e inicialização da estilização

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Trivia Quiz</h1>
+            <h1>Trivinha</h1>
         </header>
         <main id="quiz-container">
             <div id="initial-screen">
