--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <main id="quiz-container">
             <div id="initial-screen">
                 <h2>Bem-vindo(a) ao Trivia Quiz!</h2>
-                <p>Escolha uma categoria para começar:</p>
+                <p>Escolha uma categoria para começar</p>
                 <div class="category-selection">
                     <button class="btn category-btn" data-category="9">Conhecimentos Gerais</button>
                     <button class="btn category-btn" data-category="15">Jogos</button>
